@@ -4,4 +4,5 @@ enum class ReceivedDataType {
     SERIAL_PORT_ERROR,
     HEARTBEAT,
     HEARTBEAT_LIST,
+    MAKE_DRINK_REPLY,
 }
