@@ -23,3 +23,4 @@
 2024/11/13
 1. 提升端口库SerialPortDataManager#sendCommand中参数处理逻辑到业务层,支持多种数据传递通用
 2. 修正命令数据处理length计算方式
+3. 修改makedrinkreply类结构，按照command id级别实现makedrinkreply
